syntax = "proto3";

package rust_guest;

import "google/protobuf/struct.proto";

option java_package = "com.spotify.confidence.wasm";
option java_multiple_files = false;
option java_outer_classname = "Messages";

message Void {}

message SetResolverStateRequest {
    bytes state = 1;
    string account_id = 2;
}

// 16-byte AES-128 encryption key derived from client secret (SHA-256 first 16 bytes)
message SetEncryptionKeyRequest {
    bytes encryption_key = 1;
}

message ResolveSimpleRequest {
    string client_secret = 1;
    google.protobuf.Struct evaluation_context = 2;
    string name = 3;
}


message Request {
    bytes data = 1;
}

message Response {
    oneof result {
        bytes data = 1;
        string error = 2;
    }
}
